<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nabigeto.gavin.nabigetonabi.CreateNewReminder.Set_New_Reminder_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_live" />

    <ToggleButton
        android:id="@+id/toggle_live"
        android:layout_width="50dp"
        android:layout_height="50dp"

        />

    <EditText
        android:id="@+id/reminder_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_comment_field" />


    <EditText
        android:id="@+id/reminder_comment"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/toggle_time"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="Set Time" />

    <TimePicker
        android:id="@+id/reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TimePicker>

    <Button
        android:id="@+id/toggle_date"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="Set Date" />

    <DatePicker
        android:id="@+id/reminder_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></DatePicker>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_hourly"
        />
    <ToggleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/toggle_hourly"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_daily"
        />
    <ToggleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/toggle_daily"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_weekly"
        />
    <ToggleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/toggle_weekly"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_monthly"
        />
    <ToggleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/toggle_monthly"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_yearly"
        />
    <ToggleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/toggle_yearly"

        />

    <Button
        android:id="@+id/reminder_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_save" />

</LinearLayout>

</ScrollView>